🏨🏬 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Unit 10 Project
 Requirements
-[  ] Loop #1 - While Loop
-[  ] Loop #2 - For Loop
-[  ] Loops #3 
-[  ] Three new HTML elements/CSS Declarations
+[ yes ] Loop #1 - While Loop
+[ yes ] Loop #2 - For Loop
+[ yes ] Loops #3 
+[ yes ] Three new HTML elements/CSS Declarations
 
 Select ONE Additional 
-[ no ] Feature 1 - if() statement
+[ yes ] Feature 1 - if() statement
 [ no ] Feature 2 - random()
 [ no ] Feature 3 - image added to the canvas
 [ no ] Feature 4 - mouseX and mouseY
@@ -21,7 +21,6 @@ Select ONE Additional
     <title>Unit 10 Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
-    <style></style>
   </head>
 
   <body>
@@ -29,15 +28,20 @@ Select ONE Additional
       <div>
         <h2 id="start">The Muse</h2>
         <img
-          class="pic" src="https://i.natgeofe.com/n/5fdfbda3-0ccf-4df1-8ec1-fe8a521e6337/Notre-Dame_west-facade.jpg?w=2560&h=3496"
+          class="pic"
+          src="https://m.media-amazon.com/images/I/716XQyrlRhL._AC_UF894,1000_QL80_.jpg"
         />
       </div>
       <div>
         <h2 id="end">The Masterpiece</h2>
-        <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
+        <canvas id="myCanvas" data-processing-sources="myP5Code.pde"></canvas>
       </div>
     </div>
+    <h3>Coded by Nicolas 🦄</h3>
+    <h4>Dots and Boxes</h4>
+    <img
+      class="dots-boxes-img"
+      src="https://d3k81ch9hvuctc.cloudfront.net/company/TBDxcB/images/6ef6ef0a-657d-4ee4-8c10-97f87942be81.jpeg"
+    />
   </body>
 </html>
-
-<!--- Taken From Khan Academy Intro to JS: Drawing & Animation --->
